bug 441610: Mars cleanup https://bugs.eclipse.org/bugs/show_bug.cgi?id=441610
Change-Id: Ie94c1a7a442e8c0bda34fe8daf0c49382bd61f3c
Signed-off-by: Judith Gull <jgu@bsiag.com>
Reviewed-on: https://git.eclipse.org/r/32058
Tested-by: Hudson CI